@@ -10,6 +10,7 @@
 
     <target name="compile" depends="init">
         <javac includeantruntime="false" srcdir="${src}" destdir="${dist}/classes" source="23" target="23">
+            <compilerarg value="--enable-preview"/>
         </javac>
     </target>
 
